feat(manage-and-run): PR comments + continue tests