@@ -17,8 +17,7 @@
 package io.camunda.connector.runtime.inbound;
 
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.*;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
@@ -32,17 +31,26 @@ import io.camunda.connector.runtime.core.http.InstanceForwardingHttpClient;
 import io.camunda.connector.runtime.core.inbound.ExecutableId;
 import io.camunda.connector.runtime.core.inbound.InboundConnectorElement;
 import io.camunda.connector.runtime.core.inbound.correlation.MessageCorrelationPoint.StandaloneMessageCorrelationPoint;
+import io.camunda.connector.runtime.inbound.controller.ActiveInboundConnectorResponse;
 import io.camunda.connector.runtime.inbound.executable.ActiveExecutableQuery;
 import io.camunda.connector.runtime.inbound.executable.ActiveExecutableResponse;
 import io.camunda.connector.runtime.inbound.executable.ConnectorInstances;
 import io.camunda.connector.runtime.inbound.executable.InboundExecutableRegistry;
+import io.camunda.connector.runtime.instances.InstanceAwareModel;
+import io.camunda.connector.runtime.instances.service.DefaultInstanceForwardingService;
+import io.camunda.connector.runtime.instances.service.InstanceForwardingService;
 import java.net.http.HttpClient;
+import java.time.ZoneOffset;
 import java.util.*;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mockito;
+import org.mockito.stubbing.Answer;
 import org.springframework.boot.builder.SpringApplicationBuilder;
 import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.context.ConfigurableApplicationContext;
@@ -53,26 +61,39 @@ import org.springframework.http.ResponseEntity;
 
 class InboundInstancesRestControllerMultiInstancesTest {
 
-  private final InboundExecutableRegistry executableRegistry =
+  private final InboundExecutableRegistry executableRegistry1 =
+      Mockito.mock(InboundExecutableRegistry.class);
+  private final InboundExecutableRegistry executableRegistry2 =
       Mockito.mock(InboundExecutableRegistry.class);
 
-  private static final String TYPE_1 = "webhook";
-
-  private int port1 = 18080;
-  private int port2 = 18081;
+  private final int port1 = 18080;
+  private final int port2 = 18081;
 
   private final InstanceForwardingHttpClient instanceForwardingHttpClient =
       new InstanceForwardingHttpClient(
           HttpClient.newHttpClient(),
           (path) ->
-              List.of(
-                  "http://localhost:" + port1 + "/" + path,
-                  "http://localhost:" + port2 + "/" + path));
+              List.of("http://localhost:" + port1 + path, "http://localhost:" + port2 + path));
 
   private static final ExecutableId RANDOM_ID_1 = ExecutableId.fromDeduplicationId("theid1");
+  private static final ExecutableId ONLY_IN_RUNTIME_1_ID =
+      ExecutableId.fromDeduplicationId("onlyInRuntime1");
   private static final ExecutableId RANDOM_ID_2 = ExecutableId.fromDeduplicationId("theid2");
+  private static final ExecutableId ONLY_IN_RUNTIME_2_ID =
+      ExecutableId.fromDeduplicationId("onlyInRuntime2");
   private static final ExecutableId RANDOM_ID_3 = ExecutableId.fromDeduplicationId("theid3");
+  private static final String TYPE_1 = "webhook";
   private static final String TYPE_2 = "anotherType";
+  private static final String TYPE_3_ONLY_IN_RUNTIME_1 = "onlyInRuntime1Type3";
+
+  private static final Activity RUNTIME2_ACTIVITY1 =
+      Activity.level(Severity.DEBUG).tag("runtime2").message("myMessage");
+  private static final Activity RUNTIME2_ACTIVITY2 =
+      Activity.level(Severity.WARNING).tag("runtime2").message("myMessage2");
+  private static final Activity RUNTIME1_ACTIVITY1 =
+      Activity.level(Severity.INFO).tag("runtime1").message("myMessage");
+  private static final Activity RUNTIME1_ACTIVITY2 =
+      Activity.level(Severity.ERROR).tag("runtime1").message("myMessage2");
 
   static class AnotherExecutable implements InboundConnectorExecutable<InboundConnectorContext> {
 
@@ -91,7 +112,7 @@ class InboundInstancesRestControllerMultiInstancesTest {
     }
   }
 
-  private TestRestTemplate restTemplate = new TestRestTemplate();
+  private final TestRestTemplate restTemplate = new TestRestTemplate();
 
   private ConfigurableApplicationContext context1;
   private ConfigurableApplicationContext context2;
@@ -109,14 +130,21 @@ class InboundInstancesRestControllerMultiInstancesTest {
             .properties(
                 "server.port=" + port1,
                 "spring.application.name=instance1",
-                "camunda.connector.hostname=instance1")
+                "camunda.connector.hostname=instance1",
+                "camunda.connector.headless.serviceurl=http://whatever:8080")
             .initializers(
                 ctx -> {
                   ((GenericApplicationContext) ctx)
-                      .registerBean(InboundExecutableRegistry.class, () -> executableRegistry);
+                      .registerBean(InboundExecutableRegistry.class, () -> executableRegistry1);
                   ((GenericApplicationContext) ctx)
                       .registerBean(
                           InstanceForwardingHttpClient.class, () -> instanceForwardingHttpClient);
+                  ((GenericApplicationContext) ctx)
+                      .registerBean(
+                          InstanceForwardingService.class,
+                          () ->
+                              new DefaultInstanceForwardingService(
+                                  instanceForwardingHttpClient, "instance1"));
                 })
             .run();
 
@@ -125,103 +153,200 @@ class InboundInstancesRestControllerMultiInstancesTest {
             .properties(
                 "server.port=" + port2,
                 "spring.application.name=instance2",
-                "camunda.connector.hostname=instance2")
+                "camunda.connector.hostname=instance2",
+                "camunda.connector.headless.serviceurl=http://whatever:8080")
             .initializers(
                 ctx -> {
                   ((GenericApplicationContext) ctx)
-                      .registerBean(InboundExecutableRegistry.class, () -> executableRegistry);
+                      .registerBean(InboundExecutableRegistry.class, () -> executableRegistry2);
                   ((GenericApplicationContext) ctx)
                       .registerBean(
                           InstanceForwardingHttpClient.class, () -> instanceForwardingHttpClient);
+                  ((GenericApplicationContext) ctx)
+                      .registerBean(
+                          InstanceForwardingService.class,
+                          () ->
+                              new DefaultInstanceForwardingService(
+                                  instanceForwardingHttpClient, "instance2"));
                 })
             .run();
 
-    when(executableRegistry.getConnectorName(TYPE_1)).thenReturn("Webhook");
-    when(executableRegistry.getConnectorName(TYPE_2)).thenReturn("AnotherType");
-    when(executableRegistry.query(any()))
-        .thenAnswer(
-            invocationOnMock ->
-                "UNKNOWN-ID"
-                        .equals(invocationOnMock.getArgument(0, ActiveExecutableQuery.class).type())
-                    ? Collections.emptyList()
-                    : Stream.of(
-                            new ActiveExecutableResponse(
-                                RANDOM_ID_1,
-                                TestWebhookExecutable.class,
-                                List.of(
-                                    new InboundConnectorElement(
-                                        Map.of("inbound.context", "myPath", "inbound.type", TYPE_1),
-                                        new StandaloneMessageCorrelationPoint(
-                                            "myPath", "=expression", "=myPath", null),
-                                        new ProcessElement("ProcessA", 1, 1, "", ""))),
-                                Health.up(),
-                                Collections.emptyList(),
-                                System.currentTimeMillis()),
-                            new ActiveExecutableResponse(
-                                RANDOM_ID_2,
-                                AnotherExecutable.class,
-                                List.of(
-                                    new InboundConnectorElement(
-                                        Map.of(
-                                            "inbound.other.prop",
-                                            "myOtherValue",
-                                            "inbound.type",
-                                            TYPE_2),
-                                        new StandaloneMessageCorrelationPoint(
-                                            "myPath", "=expression", "=myPath", null),
-                                        new ProcessElement("ProcessB", 2, 1, "", ""))),
-                                Health.up(),
-                                Collections.emptyList(),
-                                System.currentTimeMillis()),
-                            new ActiveExecutableResponse(
-                                RANDOM_ID_3,
-                                AnotherExecutable.class,
-                                List.of(
-                                    new InboundConnectorElement(
-                                        Map.of(
-                                            "inbound.other.prop",
-                                            "myOtherValue2",
-                                            "inbound.type",
-                                            TYPE_2),
-                                        new StandaloneMessageCorrelationPoint(
-                                            "myPath", "=expression", "=myPath", null),
-                                        new ProcessElement("ProcessC", 2, 1, "id1", "")),
-                                    new InboundConnectorElement(
-                                        Map.of(
-                                            "inbound.other.prop",
-                                            "myOtherValue2_2",
-                                            "inbound.type",
-                                            TYPE_2),
-                                        new StandaloneMessageCorrelationPoint(
-                                            "myPath", "=expression2", "=myPath2", null),
-                                        new ProcessElement("ProcessC", 2, 1, "id2", ""))),
-                                Health.up(),
-                                List.of(
-                                    Activity.level(Severity.INFO).tag("myTag").message("myMessage"),
-                                    Activity.level(Severity.ERROR)
-                                        .tag("myTag2")
-                                        .message("myMessage2")),
-                                System.currentTimeMillis()))
-                        .filter(
-                            response -> {
-                              var providedType =
-                                  invocationOnMock
-                                      .getArgument(0, ActiveExecutableQuery.class)
-                                      .type();
-                              return switch (providedType) {
-                                case null -> true;
-                                case TYPE_1 -> response.executableId().equals(RANDOM_ID_1);
-                                case TYPE_2 ->
-                                    response.executableId().equals(RANDOM_ID_2)
-                                        || response.executableId().equals(RANDOM_ID_3);
-                                default -> false;
-                              };
-                            })
-                        .toList());
+    when(executableRegistry1.getConnectorName(TYPE_1)).thenReturn("Webhook");
+    when(executableRegistry1.getConnectorName(TYPE_2)).thenReturn("AnotherType");
+    when(executableRegistry2.getConnectorName(TYPE_1)).thenReturn("Webhook");
+    when(executableRegistry2.getConnectorName(TYPE_2)).thenReturn("AnotherType");
+    when(executableRegistry2.getConnectorName(TYPE_3_ONLY_IN_RUNTIME_1))
+        .thenReturn("OnlyInRuntime1");
+    when(executableRegistry1.query(any())).thenAnswer(getInstance1Executables());
+    when(executableRegistry2.query(any())).thenAnswer(getInstance2Executables());
+  }
+
+  private Answer<Object> getInstance1Executables() {
+    return invocationOnMock ->
+        "UNKNOWN-ID".equals(invocationOnMock.getArgument(0, ActiveExecutableQuery.class).type())
+            ? Collections.emptyList()
+            : Stream.of(
+                    new ActiveExecutableResponse(
+                        ONLY_IN_RUNTIME_1_ID,
+                        TestWebhookExecutable.class,
+                        List.of(
+                            new InboundConnectorElement(
+                                Map.of("inbound.context", "myPath", "inbound.type", TYPE_1),
+                                new StandaloneMessageCorrelationPoint(
+                                    "myPath", "=expression", "=myPath", null),
+                                new ProcessElement("ProcessA", 1, 1, "", ""))),
+                        Health.up(),
+                        Collections.emptyList(),
+                        System.currentTimeMillis()),
+                    new ActiveExecutableResponse(
+                        RANDOM_ID_1,
+                        TestWebhookExecutable.class,
+                        List.of(
+                            new InboundConnectorElement(
+                                Map.of("inbound.context", "myPath", "inbound.type", TYPE_1),
+                                new StandaloneMessageCorrelationPoint(
+                                    "myPath", "=expression", "=myPath", null),
+                                new ProcessElement("ProcessA", 1, 1, "", ""))),
+                        Health.up(),
+                        Collections.emptyList(),
+                        System.currentTimeMillis()),
+                    new ActiveExecutableResponse(
+                        RANDOM_ID_2,
+                        AnotherExecutable.class,
+                        List.of(
+                            new InboundConnectorElement(
+                                Map.of(
+                                    "inbound.other.prop", "myOtherValue", "inbound.type", TYPE_2),
+                                new StandaloneMessageCorrelationPoint(
+                                    "myPath", "=expression", "=myPath", null),
+                                new ProcessElement("ProcessB", 2, 1, "", ""))),
+                        Health.up(),
+                        Collections.emptyList(),
+                        System.currentTimeMillis()),
+                    new ActiveExecutableResponse(
+                        RANDOM_ID_3,
+                        AnotherExecutable.class,
+                        List.of(
+                            new InboundConnectorElement(
+                                Map.of(
+                                    "inbound.other.prop", "myOtherValue2", "inbound.type", TYPE_2),
+                                new StandaloneMessageCorrelationPoint(
+                                    "myPath", "=expression", "=myPath", null),
+                                new ProcessElement("ProcessC", 2, 1, "id1", "")),
+                            new InboundConnectorElement(
+                                Map.of(
+                                    "inbound.other.prop",
+                                    "myOtherValue2_2",
+                                    "inbound.type",
+                                    TYPE_2),
+                                new StandaloneMessageCorrelationPoint(
+                                    "myPath", "=expression2", "=myPath2", null),
+                                new ProcessElement("ProcessC", 2, 1, "id2", ""))),
+                        Health.up(),
+                        List.of(RUNTIME1_ACTIVITY1, RUNTIME1_ACTIVITY2),
+                        System.currentTimeMillis()))
+                .filter(
+                    response -> {
+                      var providedType =
+                          invocationOnMock.getArgument(0, ActiveExecutableQuery.class).type();
+                      return switch (providedType) {
+                        case null -> true;
+                        case TYPE_1 ->
+                            response.executableId().equals(RANDOM_ID_1)
+                                || response.executableId().equals(ONLY_IN_RUNTIME_1_ID);
+                        case TYPE_2 ->
+                            response.executableId().equals(RANDOM_ID_2)
+                                || response.executableId().equals(RANDOM_ID_3);
+                        default -> false;
+                      };
+                    })
+                .toList();
+  }
+
+  private Answer<Object> getInstance2Executables() {
+    return invocationOnMock ->
+        "UNKNOWN-ID".equals(invocationOnMock.getArgument(0, ActiveExecutableQuery.class).type())
+            ? Collections.emptyList()
+            : Stream.of(
+                    new ActiveExecutableResponse(
+                        ONLY_IN_RUNTIME_2_ID,
+                        TestWebhookExecutable.class,
+                        List.of(
+                            new InboundConnectorElement(
+                                Map.of("inbound.context", "myPath", "inbound.type", TYPE_1),
+                                new StandaloneMessageCorrelationPoint(
+                                    "myPath", "=expression", "=myPath", null),
+                                new ProcessElement("ProcessA", 1, 1, "", ""))),
+                        Health.up(),
+                        Collections.emptyList(),
+                        System.currentTimeMillis()),
+                    new ActiveExecutableResponse(
+                        RANDOM_ID_1,
+                        TestWebhookExecutable.class,
+                        List.of(
+                            new InboundConnectorElement(
+                                Map.of("inbound.context", "myPath", "inbound.type", TYPE_1),
+                                new StandaloneMessageCorrelationPoint(
+                                    "myPath", "=expression", "=myPath", null),
+                                new ProcessElement("ProcessA", 1, 1, "", ""))),
+                        Health.down(new IllegalArgumentException("Test error message")),
+                        Collections.emptyList(),
+                        System.currentTimeMillis()),
+                    new ActiveExecutableResponse(
+                        RANDOM_ID_2,
+                        AnotherExecutable.class,
+                        List.of(
+                            new InboundConnectorElement(
+                                Map.of(
+                                    "inbound.other.prop", "myOtherValue", "inbound.type", TYPE_2),
+                                new StandaloneMessageCorrelationPoint(
+                                    "myPath", "=expression", "=myPath", null),
+                                new ProcessElement("ProcessB", 2, 1, "", ""))),
+                        Health.unknown("Test unknown key", "Test unknown value"),
+                        Collections.emptyList(),
+                        System.currentTimeMillis()),
+                    new ActiveExecutableResponse(
+                        RANDOM_ID_3,
+                        AnotherExecutable.class,
+                        List.of(
+                            new InboundConnectorElement(
+                                Map.of(
+                                    "inbound.other.prop", "myOtherValue2", "inbound.type", TYPE_2),
+                                new StandaloneMessageCorrelationPoint(
+                                    "myPath", "=expression", "=myPath", null),
+                                new ProcessElement("ProcessC", 2, 1, "id1", "")),
+                            new InboundConnectorElement(
+                                Map.of(
+                                    "inbound.other.prop",
+                                    "myOtherValue2_2",
+                                    "inbound.type",
+                                    TYPE_2),
+                                new StandaloneMessageCorrelationPoint(
+                                    "myPath", "=expression2", "=myPath2", null),
+                                new ProcessElement("ProcessC", 2, 1, "id2", ""))),
+                        Health.up(),
+                        List.of(RUNTIME2_ACTIVITY1, RUNTIME2_ACTIVITY2),
+                        System.currentTimeMillis()))
+                .filter(
+                    response -> {
+                      var providedType =
+                          invocationOnMock.getArgument(0, ActiveExecutableQuery.class).type();
+                      return switch (providedType) {
+                        case null -> true;
+                        case TYPE_1 ->
+                            response.executableId().equals(RANDOM_ID_1)
+                                || response.executableId().equals(ONLY_IN_RUNTIME_2_ID);
+                        case TYPE_2 ->
+                            response.executableId().equals(RANDOM_ID_2)
+                                || response.executableId().equals(RANDOM_ID_3);
+                        default -> false;
+                      };
+                    })
+                .toList();
   }
 
   @Test
-  public void shouldReturnConnectorInstances() throws Exception {
+  public void shouldReturnConnectorInstances() {
     ResponseEntity<List<ConnectorInstances>> response =
         restTemplate.exchange(
             "http://localhost:" + port1 + "/inbound-instances",
@@ -229,33 +354,42 @@ class InboundInstancesRestControllerMultiInstancesTest {
             null,
             new ParameterizedTypeReference<>() {});
 
-    List<ConnectorInstances> activities = response.getBody();
-    //    List<ConnectorInstances> instance =
-    //        ConnectorsObjectMapperSupplier.getCopy().readValue(response, new TypeReference<>()
-    // {});
-    //    assertEquals(2, instance.size());
-    //    var instance1 = instance.get(0);
-    //    assertEquals(TYPE_1, instance1.connectorId());
-    //    assertEquals("Webhook", instance1.connectorName());
-    //    assertEquals(1, instance1.instances().size());
-    //    assertEquals(RANDOM_ID_1, instance1.instances().get(0).executableId());
-    //    assertEquals("ProcessA",
-    // instance1.instances().get(0).elements().getFirst().bpmnProcessId());
-    //
-    //    var instance2 = instance.get(1);
-    //    assertEquals(TYPE_2, instance2.connectorId());
-    //    assertEquals("AnotherType", instance2.connectorName());
-    //    assertEquals(2, instance2.instances().size());
-    //    assertEquals(RANDOM_ID_2, instance2.instances().get(0).executableId());
-    //    assertEquals("ProcessB",
-    // instance2.instances().get(0).elements().getFirst().bpmnProcessId());
-    //    assertEquals(RANDOM_ID_3, instance2.instances().get(1).executableId());
-    //    assertEquals("ProcessC",
-    // instance2.instances().get(1).elements().getFirst().bpmnProcessId());
+    List<ConnectorInstances> instance = response.getBody();
+    assertEquals(2, instance.size());
+    var instance1 = instance.get(0);
+    assertEquals(TYPE_1, instance1.connectorId());
+    assertEquals("Webhook", instance1.connectorName());
+    assertEquals(3, instance1.instances().size());
+    var executableIds =
+        instance1.instances().stream().map(ActiveInboundConnectorResponse::executableId).toList();
+    assertThat(
+        executableIds, containsInAnyOrder(RANDOM_ID_1, ONLY_IN_RUNTIME_1_ID, ONLY_IN_RUNTIME_2_ID));
+    ActiveInboundConnectorResponse activeInboundConnectorResponse =
+        instance1.instances().stream()
+            .filter(r -> r.executableId().equals(RANDOM_ID_1))
+            .findFirst()
+            .get();
+    assertEquals(
+        Health.down(new IllegalArgumentException("Test error message")),
+        activeInboundConnectorResponse.health());
+    assertEquals("ProcessA", activeInboundConnectorResponse.elements().getFirst().bpmnProcessId());
+
+    var instance2 = instance.get(1);
+    assertEquals(TYPE_2, instance2.connectorId());
+    assertEquals("AnotherType", instance2.connectorName());
+    assertEquals(2, instance2.instances().size());
+    assertEquals(RANDOM_ID_2, instance2.instances().get(0).executableId());
+    assertEquals(
+        Health.unknown("Test unknown key", "Test unknown value"),
+        instance2.instances().get(0).health());
+    assertEquals("ProcessB", instance2.instances().get(0).elements().getFirst().bpmnProcessId());
+    assertEquals(RANDOM_ID_3, instance2.instances().get(1).executableId());
+    assertEquals(Health.up(), instance2.instances().get(1).health());
+    assertEquals("ProcessC", instance2.instances().get(1).elements().getFirst().bpmnProcessId());
   }
 
   @Test
-  public void shouldReturn404_whenUnknownConnectorType() throws Exception {
+  public void shouldReturn404_whenUnknownConnectorType() {
     var response =
         restTemplate.getForEntity(
             "http://localhost:" + port1 + "/inbound-instances/UNKNOWN-ID", String.class);
@@ -265,113 +399,151 @@ class InboundInstancesRestControllerMultiInstancesTest {
     assertThat(404, equalTo(response.getStatusCode().value()));
   }
 
-  //  @Test
-  //  public void shouldReturnSingleConnectorInstance() throws Exception {
-  //    var response =
-  //        mockMvc
-  //            .perform(get("/inbound-instances/" + TYPE_1))
-  //            .andExpect(status().isOk())
-  //            .andReturn()
-  //            .getResponse()
-  //            .getContentAsString();
-  //
-  //    ConnectorInstances instance =
-  //        ConnectorsObjectMapperSupplier.getCopy().readValue(response, ConnectorInstances.class);
-  //    assertEquals(TYPE_1, instance.connectorId());
-  //    assertEquals("Webhook", instance.connectorName());
-  //    assertEquals(1, instance.instances().size());
-  //    assertEquals(RANDOM_ID_1, instance.instances().get(0).executableId());
-  //    assertEquals("ProcessA", instance.instances().get(0).elements().getFirst().bpmnProcessId());
-  //  }
-  //
-  //  @Test
-  //  public void shouldReturn404_whenUnknownExecutableId() throws Exception {
-  //    mockMvc
-  //        .perform(get("/inbound-instances/" + TYPE_1 + "/executables/UNKNOWN-ID"))
-  //        .andExpect(status().isNotFound())
-  //        .andExpect(
-  //            content()
-  //                .string(
-  //                    containsString(
-  //                        "Data of type 'ActiveInboundConnectorResponse' with id 'UNKNOWN-ID' not
-  // found")));
-  //  }
-  //
-  //  @Test
-  //  public void shouldReturn404_whenUnknownConnectorTypeAndValidExecutableId() throws Exception {
-  //    mockMvc
-  //        .perform(get("/inbound-instances/UNKNOWN-ID/executables/" + RANDOM_ID_1.getId()))
-  //        .andExpect(status().isNotFound())
-  //        .andExpect(
-  //            content()
-  //                .string(
-  //                    containsString(
-  //                        "Data of type 'ConnectorInstances' with id 'UNKNOWN-ID' not found")));
-  //  }
-  //
-  //  @Test
-  //  public void shouldReturnSingleExecutable() throws Exception {
-  //    var response =
-  //        mockMvc
-  //            .perform(get("/inbound-instances/" + TYPE_1 + "/executables/" +
-  // RANDOM_ID_1.getId()))
-  //            .andExpect(status().isOk())
-  //            .andReturn()
-  //            .getResponse()
-  //            .getContentAsString();
-  //
-  //    ActiveInboundConnectorResponse executable =
-  //        ConnectorsObjectMapperSupplier.getCopy()
-  //            .readValue(response, ActiveInboundConnectorResponse.class);
-  //    assertEquals(RANDOM_ID_1, executable.executableId());
-  //    assertEquals("ProcessA", executable.elements().getFirst().bpmnProcessId());
-  //  }
-  //
-  //  @Test
-  //  public void shouldReturnEmptyActivityLogs_whenNoLogs() throws Exception {
-  //    var response =
-  //        mockMvc
-  //            .perform(
-  //                get(
-  //                    "/inbound-instances/"
-  //                        + TYPE_1
-  //                        + "/executables/"
-  //                        + RANDOM_ID_1.getId()
-  //                        + "/logs"))
-  //            .andExpect(status().isOk())
-  //            .andReturn()
-  //            .getResponse()
-  //            .getContentAsString();
-  //
-  //    List<Activity> logs =
-  //        ConnectorsObjectMapperSupplier.getCopy().readValue(response, new TypeReference<>() {});
-  //    assertTrue(logs.isEmpty());
-  //  }
-  //
-  //  @Test
-  //  public void shouldReturnActivityLogs_whenTypeProvided() throws Exception {
-  //    var response =
-  //        mockMvc
-  //            .perform(
-  //                get(
-  //                    "/inbound-instances/"
-  //                        + TYPE_2
-  //                        + "/executables/"
-  //                        + RANDOM_ID_3.getId()
-  //                        + "/logs"))
-  //            .andExpect(status().isOk())
-  //            .andReturn()
-  //            .getResponse()
-  //            .getContentAsString();
-  //
-  //    List<Activity> logs =
-  //        ConnectorsObjectMapperSupplier.getCopy().readValue(response, new TypeReference<>() {});
-  //    assertEquals(2, logs.size());
-  //    var log1 = logs.stream().filter(a -> a.severity() == Severity.INFO).findFirst().get();
-  //    assertEquals("myTag", log1.tag());
-  //    assertEquals("myMessage", log1.message());
-  //    var log2 = logs.stream().filter(a -> a.severity() == Severity.ERROR).findFirst().get();
-  //    assertEquals("myTag2", log2.tag());
-  //    assertEquals("myMessage2", log2.message());
-  //  }
+  @Test
+  public void shouldReturnSingleConnectorInstance() {
+    ResponseEntity<ConnectorInstances> response =
+        restTemplate.exchange(
+            "http://localhost:" + port1 + "/inbound-instances/" + TYPE_1,
+            HttpMethod.GET,
+            null,
+            new ParameterizedTypeReference<>() {});
+
+    var instance = response.getBody();
+    assertEquals(TYPE_1, instance.connectorId());
+    assertEquals("Webhook", instance.connectorName());
+    assertEquals(3, instance.instances().size());
+    var executableIds =
+        instance.instances().stream().map(ActiveInboundConnectorResponse::executableId).toList();
+    assertThat(
+        executableIds, containsInAnyOrder(RANDOM_ID_1, ONLY_IN_RUNTIME_1_ID, ONLY_IN_RUNTIME_2_ID));
+    ActiveInboundConnectorResponse activeInboundConnectorResponse =
+        instance.instances().stream()
+            .filter(r -> r.executableId().equals(RANDOM_ID_1))
+            .findFirst()
+            .get();
+    assertEquals(
+        Health.down(new IllegalArgumentException("Test error message")),
+        activeInboundConnectorResponse.health());
+    assertEquals("ProcessA", activeInboundConnectorResponse.elements().getFirst().bpmnProcessId());
+  }
+
+  @Test
+  public void shouldReturn404_whenUnknownExecutableId() {
+    var response =
+        restTemplate.getForEntity(
+            "http://localhost:"
+                + port1
+                + "/inbound-instances/"
+                + TYPE_1
+                + "/executables/UNKNOWN-ID",
+            String.class);
+    assertThat(
+        response.getBody(),
+        containsString(
+            "Data of type 'ActiveInboundConnectorResponse' with id 'UNKNOWN-ID' not found"));
+    assertThat(404, equalTo(response.getStatusCode().value()));
+  }
+
+  @Test
+  public void shouldReturn404_whenUnknownConnectorTypeAndValidExecutableId() {
+    var response =
+        restTemplate.getForEntity(
+            "http://localhost:"
+                + port1
+                + "/inbound-instances/UNKNOWN-ID/executables/"
+                + RANDOM_ID_1.getId(),
+            String.class);
+    assertThat(
+        response.getBody(),
+        containsString(
+            "Data of type 'ActiveInboundConnectorResponse' with id 'e379ef68540767f31108eb2fa581814616895690cc92bc5e955e1001743e49b9' not found"));
+    assertThat(404, equalTo(response.getStatusCode().value()));
+  }
+
+  private static Stream<Arguments> provideExecutableIds() {
+    return Stream.of(
+        Arguments.of(RANDOM_ID_1),
+        Arguments.of(ONLY_IN_RUNTIME_1_ID),
+        Arguments.of(ONLY_IN_RUNTIME_2_ID));
+  }
+
+  @ParameterizedTest
+  @MethodSource("provideExecutableIds")
+  public void shouldReturnSingleExecutable(ExecutableId executableId) {
+    var response =
+        restTemplate.getForEntity(
+            "http://localhost:"
+                + port1
+                + "/inbound-instances/"
+                + TYPE_1
+                + "/executables/"
+                + executableId.getId(),
+            ActiveInboundConnectorResponse.class);
+    var executable = response.getBody();
+    assertEquals(executableId, executable.executableId());
+    assertEquals("ProcessA", executable.elements().getFirst().bpmnProcessId());
+  }
+
+  @Test
+  public void shouldReturnEmptyActivityLogs_whenNoLogs() {
+    ResponseEntity<List<InstanceAwareModel.InstanceAwareActivity>> response =
+        restTemplate.exchange(
+            "http://localhost:"
+                + port1
+                + "/inbound-instances/"
+                + TYPE_1
+                + "/executables/"
+                + RANDOM_ID_1.getId()
+                + "/logs",
+            HttpMethod.GET,
+            null,
+            new ParameterizedTypeReference<>() {});
+    var logs = response.getBody();
+    assertTrue(logs.isEmpty());
+  }
+
+  @Test
+  public void shouldReturnActivityLogs_whenTypeProvided() {
+    ResponseEntity<List<InstanceAwareModel.InstanceAwareActivity>> response =
+        restTemplate.exchange(
+            "http://localhost:"
+                + port1
+                + "/inbound-instances/"
+                + TYPE_2
+                + "/executables/"
+                + RANDOM_ID_3.getId()
+                + "/logs",
+            HttpMethod.GET,
+            null,
+            new ParameterizedTypeReference<>() {});
+    var logs = response.getBody();
+    assertEquals(4, logs.size());
+    assertThat(
+        logs,
+        containsInAnyOrder(
+            new InstanceAwareModel.InstanceAwareActivity(
+                RUNTIME1_ACTIVITY1.severity(),
+                RUNTIME1_ACTIVITY1.tag(),
+                RUNTIME1_ACTIVITY1.timestamp().withOffsetSameInstant(ZoneOffset.UTC),
+                RUNTIME1_ACTIVITY1.message(),
+                "instance1"),
+            new InstanceAwareModel.InstanceAwareActivity(
+                RUNTIME1_ACTIVITY2.severity(),
+                RUNTIME1_ACTIVITY2.tag(),
+                RUNTIME1_ACTIVITY2.timestamp().withOffsetSameInstant(ZoneOffset.UTC),
+                RUNTIME1_ACTIVITY2.message(),
+                "instance1"),
+            new InstanceAwareModel.InstanceAwareActivity(
+                RUNTIME2_ACTIVITY1.severity(),
+                RUNTIME2_ACTIVITY1.tag(),
+                RUNTIME2_ACTIVITY1.timestamp().withOffsetSameInstant(ZoneOffset.UTC),
+                RUNTIME2_ACTIVITY1.message(),
+                "instance2"),
+            new InstanceAwareModel.InstanceAwareActivity(
+                RUNTIME2_ACTIVITY2.severity(),
+                RUNTIME2_ACTIVITY2.tag(),
+                RUNTIME2_ACTIVITY2.timestamp().withOffsetSameInstant(ZoneOffset.UTC),
+                RUNTIME2_ACTIVITY2.message(),
+                "instance2")));
+  }
 }
